# llm_playground

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py
app/schemas/: models.py
app/services/: llm_client.py
