[project]
name = "llm-playground"
version = "0.1.0"
description = "LLM playground API"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings"
    "openrouter",
    "python-dotenv"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
